Tests: new folders Library, LibraryTests
Test.st for testing
Object>>error:
Primitives.RaiseException
ErrorException

2010-11-22
LocalBlock deleted
block.Closure points to external ExecutionBlock
new Block(block, executionclosure)
New ExecutionBlock constructor using block.Closure
ExecutionBlock.NoLocals, .NoParentLocals, .NoArguments, .NoParentArguments
All this to implement closure in blocks

2011-09-16
AST with first TreeParser and tests

2011-09-17
AST Removed
Model, IExpression, ConstantExpression, InstanceVariableExpression, SelfExpression
and MessageExpresion
ModelParse with tests
IExpression.AsString with tests
CompositeExpression with tests
MethodModel with parse and initial tests

2011-09-18
SetExpression with parse support and tests
Local variables in method parse with tests
ReturnExpression with parse support and tests
IVisitor, IVisitable in MethodModel, IExpression, expressions
ICompiler, AbstractCompiler
Compilers/Javascript/Compiler with first tests

2011-09-24
ClassModel, in MethodModel and ModelParser, and compile support with tests
ClassVariableExpression, InstanceVariableExpression, with ModelParser support and tests

2011-09-25
ChunkReader with tests
FileOut01.st file for tests (taken from Squeak Object file out)
CodeModel used in CodeReader
CodeReader with tests
BlockExpression used in ModelParser and CodeReader tests
SymbolExpression used in ModelParser and CodeReader tests
PrimitiveExpression usind in ModelParser tests
FileOut01.st First compile to Javascript in test
FileOut02.st First compile to Javascript in test

2011-10-01
SourceWriter with tests
SourceWriter used by Javascript Compiler
TokenType.Parameter
ModelParse support for: parameter in blocks, local variables in blocks
BlockExpression with paramteres and local variables
SqueakObject.st for parser tests
Fluent Message

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/