@@ -107,6 +107,7 @@
     <Compile Include="Model\ConstantExpression.cs" />
     <Compile Include="Model\ClassVariableExpression.cs" />
     <Compile Include="Model\BlockExpression.cs" />
+    <Compile Include="Model\CollectionExpression.cs" />
     <Compile Include="Model\FluentMessageExpression.cs" />
     <Compile Include="Model\PrimitiveExpression.cs" />
     <Compile Include="Model\SymbolExpression.cs" />
